--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
   "name": "record-management-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "start-production.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "dev": "nodemon src/app.ts",
+    "start": "node start-production.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "dev:local": "nodemon src/app.ts",
     "migrate": "node migrate-database.js",
     "test-registration": "node test-registration.js",
-    "test-db": "node start-server.js"
+    "test-db": "node start-server.js",
+    "postinstall": "npm run build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["student-management", "record-management", "school-system"],
+  "author": "Estorco",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
+  "description": "Student Record Management System Backend API",
+  "dependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
@@ -23,25 +25,29 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^24.0.1",
     "@types/sequelize": "^4.28.20",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10",
-    "sequelize": "^6.37.7",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^2.3.3",
+    "sequelize": "^6.37.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "ts-node-dev": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
