--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "record-management-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "migrate": "node migrate-database.js",
     "test-registration": "node test-registration.js",
@@ -24,7 +24,7 @@
     "@types/node": "^24.0.1",
     "@types/sequelize": "^4.28.20",
     "bcryptjs": "^3.0.2",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
