--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: SESSION_SECRET
         generateValue: true
       - key: FRONTEND_URL
-        value: https://your-frontend-domain.com
+        value: https://rms-front-v8xi.onrender.com
     healthCheckPath: /health
     autoDeploy: true
     branch: main
