--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: SESSION_SECRET
         generateValue: true
       - key: FRONTEND_URL
-        value: https://rms-front-9our.onrender.com
+        value: 
     healthCheckPath: /health
     autoDeploy: true
     branch: main
