--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: SESSION_SECRET
         generateValue: true
       - key: FRONTEND_URL
-        value: 
+        value: https://rms-front-ixef.onrender.com/login
     healthCheckPath: /health
     autoDeploy: true
     branch: main
