--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: rms-backend
+    name: rms-back-bxkx
     env: node
     plan: starter
     buildCommand: npm install && npm run build
