--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Database Configuration
-DB_HOST=153.92.15.31
-DB_USER=u875409848_estorco
-DB_PASSWORD=Y9Lq>$f$Q1
-DB_NAME=u875409848_estorco
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=@romy2003
+DB_NAME=test_db
 DB_PORT=3306
 
 # Server Configuration
 PORT=5000
-NODE_ENV=production
+NODE_ENV=development
